try some optimisations

--- a/config.json.ini
+++ b/config.json.ini
@@ -3,5 +3,6 @@
     "user": "user",
     "password": "password",
     "database": "database"
-    "port": 3306
+    "port": 3306,
+    "limit": 100
 }
