--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "ejs": "^3.1.9",
     "mariadb": "^3.3.0",
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/ws": "^8.5.10"
   }
 }
