--- a/config.json.ini
+++ b/config.json.ini
@@ -4,5 +4,7 @@
     "password": "password",
     "database": "database"
     "port": 3306,
-    "connectionLimit": 100
+    "connectionLimit": 100,
+    "key_path": "",
+    "cert_path": ""
 }
