--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
+    "https": "^1.0.0",
     "mariadb": "^3.3.0",
     "ws": "^8.16.0"
   },
