--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.9",
     "https": "^1.0.0",
     "mariadb": "^3.3.0",
+    "typescript": "^5.4.5",
     "ws": "^8.16.0"
   },
   "devDependencies": {
