--- a/config.json.ini
+++ b/config.json.ini
@@ -1,10 +1,8 @@
 {
-    "host": "host",
+    "host": "localhost",
     "user": "user",
     "password": "password",
-    "database": "database"
+    "database": "chess_pomme",
     "port": 3306,
-    "connectionLimit": 100,
-    "key_path": "",
-    "cert_path": ""
+    "connectionLimit": 100
 }
