--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
-    "https": "^1.0.0",
+    "http": "^0.0.1-security",
     "mariadb": "^3.3.0",
     "typescript": "^5.4.5",
     "ws": "^8.16.0"
